--- a/css/style.css
+++ b/css/style.css
@@ -6,5 +6,66 @@
 }
 
 body {
-    background-color: aqua;
+    font-family: 'Roboto', sans-serif;
 }
+
+.container {
+    width: 80%;
+    margin: 0 auto;
+}
+
+.clearfix::after {
+    content: "";
+    display: table;
+    clear: both;
+}
+.float-left {
+    float: left;
+}
+
+.list-inline {
+    list-style: none;
+}
+.list-inline > li {
+    display: inline-block;
+    padding: 0 10px;
+    text-decoration: none;
+}
+.list-inline a {
+    text-decoration: none;
+    color: white;
+    font-size: 12px;
+    text-transform: uppercase;
+}
+
+header {
+    height: 550px;
+    background-color: #0c325a;
+    background-image: url(../img/background-header.png);
+    background-position: 112% 163%;
+    background-size: 65% auto;
+    background-repeat: no-repeat;
+}
+
+.header-nav {
+    height: 80px;
+    line-height: 80px;
+    vertical-align: middle;
+}
+.header-logo {
+    width: 15%;
+    height: 100%;
+    
+}
+
+.header-logo img {
+    vertical-align: middle;
+    padding-bottom: 12px;
+}
+
+.nav-left {
+    width: 45%;
+    height: 100%;
+    text-align: left;
+}
+
