--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,6 @@ body {
     text-decoration: none;
     text-transform: uppercase;
 }
-
 .btn-blue {
     background-color: #0c325a;
     border: 1px solid white;
@@ -75,6 +74,10 @@ body {
     background-color: lightslategray;
     border: 1px solid #7cbb02;
     color: #7cbb02;
+}
+.btn-large {
+    padding: 20px;
+    font-size: 14px;
 }
 
 header {
@@ -115,4 +118,25 @@ header {
 
 .float-right {
     float: right;
+}
+
+
+.jumbotron {
+    position:relative;
+    height: 470px;
+}
+
+.jumbotron-text {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%)
+}
+
+h1 {
+    color: white;
+    font-size: 55px;
+    font-weight: 600;
+    margin-bottom: 30px;
+    letter-spacing: 2px;
 }
